# ScreenSaver_PPRY

./: .gitignore  README.md  demo_speedup  screensaver_omp_optimized
paralela/: CMakeLists.txt
paralela/base/: README.md
paralela/base/src/: main_base.cpp
paralela/opt/src/: render.cpp  render.hpp
paralela/optimized/: CMakeLists.txt  CMakeLists_optimized.txt  README.md  README_OPTIMIZED.md  RESULTADOS_SPEEDUP.md  clean.sh  main_demo.cpp  main_optimized.cpp  run.sh  run_analysis.sh  simulation_base.h  simulation_optimized.h
paralela/optimized/src/: advanced_optimizations.h  common.h  config.sh  data_structures_optimized.h  demo_combined  demo_speedup  generate_charts.py  main_demo_combined.cpp  main_optimized  main_optimized.cpp  main_visual_demo.cpp  memory_optimizations.h  run_analysis.sh  run_inciso_analysis.sh  simulation_data_optimized.h  unified_analysis
paralela/optimized/src/data/: main_optimized.csv
secuencial/: .gitignore  CMakeLists.txt  README.md
secuencial/src/: main.cpp
